# fastapi

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  celery.bat  docker-compose.yml  example.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  run.bat
alembic/: env.py
alembic/versions/: 2024_03_07_1207-4e3aa858ff94_init.py  2024_03_07_1759-d83ea28d05d6_.py  2024_03_15_1142-1b83f85e8eba_init.py  2024_03_15_1144-2a7ec0796dbd_populate.py
docker/: celery.sh
migrations/: env.py
migrations/versions/: ec0d99cc78e4_init.py
scripts/: app.sh  go.sh
src/: __init__.py  config.py  database.py  fastapi_file.py  main.py
src/auth/: config.py  manager.py  models.py  schemas.py  utils.py
src/blog/: models.py  router.py  schemas.py
src/chat/: router.py
src/tasks/: celery.py
src/templates/: base.html  chat.html  chat_id.html  index.html  search.html
src/views/: router.py
tests/: test_api_shumeiko.py
